// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a ButtonDialog control 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className="test-class"
  color={null}
  contentEditable={false}
  controlled={true}
  dialogClasses={
    Array [
      "test-class-dialog",
    ]
  }
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  iconStyle=""
  id={null}
  left={null}
  location="bottom"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  notriangle={false}
  obj="ButtonDialog"
  onClick={[Function]}
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  triangleClasses={Array []}
  visible={true}
  width={null}
  xcss={null}
>
  <ButtonDialog__ButtonDialogView
    className="ui-button-dialog test-class"
    id="ButtonDialog-0"
  >
    <Button
      backgroundColor={null}
      borderColor={null}
      bottom={null}
      className={null}
      color={null}
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      iconName="bomb"
      iconStyle=""
      id={null}
      left={null}
      location="none"
      minHeight={null}
      minWidth={null}
      noedit={false}
      nohover={false}
      noripple={false}
      notheme={false}
      notooltip={false}
      obj="Button"
      onClick={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
        }
      }
      testing={true}
      theme={null}
      tooltip={null}
      top={null}
      visible={true}
      width={null}
      xcss={null}
    />
    <ButtonDialog__ButtonDialogPopup
      className="ui-dialog-popup test-class-dialog"
      location="bottom"
      onClick={[Function]}
      visible={false}
    >
      <ButtonDialog__ButtonDialogContent
        sizing="normal"
        visible={false}
      >
        <p>
          Dialog test
        </p>
      </ButtonDialog__ButtonDialogContent>
      <ButtonDialog__StyledTriangle
        className="ui-dialog-triangle"
        direction="up"
        location="bottom"
        nobase={true}
        sizing="normal"
        style={
          Object {
            "fill": "#ffffff",
            "stroke": "#c0c0c0",
          }
        }
        visible={false}
      />
    </ButtonDialog__ButtonDialogPopup>
  </ButtonDialog__ButtonDialogView>
</Wrapper>
`;

exports[`Test creation of a ButtonDialog control on top 1`] = `
<Wrapper
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className="test-class"
  color={null}
  contentEditable={false}
  controlled={true}
  dialogClasses={
    Array [
      "test-class-dialog",
    ]
  }
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  iconStyle=""
  id={null}
  left={null}
  location="top"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  notriangle={false}
  obj="ButtonDialog"
  onClick={[Function]}
  onError={[Function]}
  padding={null}
  reset={false}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  triangleClasses={Array []}
  visible={true}
  width={null}
  xcss={null}
>
  <ButtonDialog__ButtonDialogView
    className="ui-button-dialog test-class"
    id="ButtonDialog-0"
  >
    <Button
      backgroundColor={null}
      borderColor={null}
      bottom={null}
      className={null}
      color={null}
      contentEditable={false}
      controlled={true}
      direction="right"
      disabled={false}
      err={null}
      errorMessage={null}
      focus={false}
      height={null}
      iconName="bomb"
      iconStyle=""
      id={null}
      left={null}
      location="none"
      minHeight={null}
      minWidth={null}
      noedit={false}
      nohover={false}
      noripple={false}
      notheme={false}
      notooltip={false}
      obj="Button"
      onClick={[Function]}
      padding={null}
      selected={false}
      sizing="normal"
      style={
        Object {
          "backgroundColor": "inherit",
          "color": "inherit",
        }
      }
      testing={true}
      theme={null}
      tooltip={null}
      top={null}
      visible={true}
      width={null}
      xcss={null}
    />
    <ButtonDialog__ButtonDialogPopup
      className="ui-dialog-popup test-class-dialog"
      location="top"
      onClick={[Function]}
      visible={false}
    >
      <ButtonDialog__ButtonDialogContent
        sizing="normal"
        visible={false}
      >
        <p>
          Dialog test
        </p>
      </ButtonDialog__ButtonDialogContent>
      <ButtonDialog__StyledTriangle
        className="ui-dialog-triangle"
        direction="down"
        location="top"
        nobase={true}
        sizing="normal"
        style={
          Object {
            "fill": "#ffffff",
            "stroke": "#c0c0c0",
          }
        }
        visible={false}
      />
    </ButtonDialog__ButtonDialogPopup>
  </ButtonDialog__ButtonDialogView>
</Wrapper>
`;

exports[`Test making the ButtonDialog invisible 1`] = `
<ButtonDialog
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  dialogClasses={Array []}
  direction="right"
  disabled={false}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  iconStyle=""
  id={null}
  left={null}
  location="bottom"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  notriangle={false}
  obj="ButtonDialog"
  onClick={[Function]}
  padding={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  triangleClasses={Array []}
  visible={false}
  width={null}
  xcss={null}
/>
`;

exports[`Test retrieval of ButtonDialog props object 1`] = `
Object {
  "backgroundColor": null,
  "borderColor": null,
  "bottom": null,
  "children": null,
  "className": null,
  "color": null,
  "contentEditable": false,
  "controlled": true,
  "dialogClasses": Array [],
  "direction": "right",
  "disabled": false,
  "err": null,
  "errorMessage": null,
  "focus": false,
  "height": null,
  "iconName": "bomb",
  "iconStyle": "",
  "id": null,
  "left": null,
  "location": "bottom",
  "minHeight": null,
  "minWidth": null,
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "notheme": false,
  "notooltip": false,
  "notriangle": false,
  "obj": "ButtonDialog",
  "onClick": [Function],
  "padding": null,
  "selected": false,
  "sizing": "normal",
  "style": Object {
    "backgroundColor": "inherit",
    "color": "inherit",
  },
  "testing": true,
  "theme": null,
  "tooltip": null,
  "top": null,
  "triangleClasses": Array [],
  "visible": true,
  "width": null,
  "xcss": null,
}
`;

exports[`Test the disabling of the ButtonDialog control 1`] = `
<ButtonDialog
  backgroundColor={null}
  borderColor={null}
  bottom={null}
  className={null}
  color={null}
  contentEditable={false}
  controlled={true}
  dialogClasses={Array []}
  direction="right"
  disabled={true}
  err={null}
  errorMessage={null}
  focus={false}
  height={null}
  iconName="bomb"
  iconStyle=""
  id={null}
  left={null}
  location="bottom"
  minHeight={null}
  minWidth={null}
  noedit={false}
  nohover={false}
  noripple={false}
  notheme={false}
  notooltip={false}
  notriangle={false}
  obj="ButtonDialog"
  onClick={[Function]}
  padding={null}
  selected={false}
  sizing="normal"
  style={
    Object {
      "backgroundColor": "inherit",
      "color": "inherit",
    }
  }
  testing={true}
  theme={null}
  tooltip={null}
  top={null}
  triangleClasses={Array []}
  visible={true}
  width={null}
  xcss={null}
/>
`;
